Phase IV/y.output
Terminals unused in grammar

    GET_TRAJ
    DOLLAR
    DOUBLE_QUOTE
    SINGLE_QUOTE


Grammar

    0 $accept: code $end

    1 code: code_subpart
    2     | code code_subpart

    3 code_subpart: comments
    4             | startfn
    5             | function_decl

    6 $@1: ε

    7 $@2: ε

    8 startfn: START OPENCU $@1 body $@2 CLOSECU

    9 body: exp_stmt body
   10     | call_stmt_with_dot body
   11     | conditional_stmt body
   12     | loop_stmt body
   13     | unary_operation_without_dot DOT
   14     | return_stmt body
   15     | comments body
   16     | output_stmt body
   17     | input_stmt body
   18     | ε

   19 $@3: ε

   20 $@4: ε

   21 $@5: ε

   22 $@6: ε

   23 body: SCOPEOPEN $@3 OPENCU $@4 body SCOPECLOSE $@5 CLOSECU $@6 body
   24     | inbuilt_functions_with_dot body
   25     | decl_stmt_with_exp body

   26 loop_body: exp_stmt loop_body
   27          | call_stmt_with_dot loop_body
   28          | conditional_stmt loop_body
   29          | loop_stmt loop_body

   30 $@7: ε

   31 loop_body: unary_operation_without_dot DOT $@7 loop_body
   32          | return_stmt loop_body
   33          | comments loop_body
   34          | output_stmt loop_body
   35          | input_stmt loop_body
   36          | ε

   37 $@8: ε

   38 $@9: ε

   39 $@10: ε

   40 $@11: ε

   41 loop_body: SCOPEOPEN $@8 OPENCU $@9 loop_body SCOPECLOSE $@10 CLOSECU $@11 body
   42          | inbuilt_functions_with_dot loop_body
   43          | decl_stmt_with_exp loop_body
   44          | BREAK DOT loop_body

   45 bi_op: ADD
   46      | SUB
   47      | MUL
   48      | DIV
   49      | MOD
   50      | EXP

   51 relop: EQ
   52      | NEQ
   53      | GEQ
   54      | GT
   55      | LEQ
   56      | LT

   57 $@12: ε

   58 $@13: ε

   59 $@14: ε

   60 vectors: OPENSQ $@12 check_rhs_exp COMMA $@13 check_rhs_exp CLOSESQ $@14

   61 primi_datatype: INT
   62               | DOUBLE
   63               | BOOL
   64               | STRING

   65 non_pri_datatype: MASS
   66                 | TIME
   67                 | POSITION
   68                 | VELOCITY
   69                 | ACC
   70                 | ENERGY
   71                 | THETA
   72                 | E
   73                 | DISTANCE
   74                 | MOMENTUM

   75 datatypes: primi_datatype
   76          | non_pri_datatype

   77 single_variable: ID

   78 $@15: ε

   79 single_variable: ID $@15 dimensions

   80 dim_con: OPENSQ

   81 dimensions: dim_con check_rhs_exp CLOSESQ

   82 $@16: ε

   83 dimensions: dim_con check_rhs_exp CLOSESQ $@16 dimensions

   84 single_variable_for_exp_stmt: single_variable

   85 $@17: ε

   86 $@18: ε

   87 exp_stmt: single_variable_for_exp_stmt ASSGN $@17 check_rhs_exp DOT $@18

   88 pos: FIRST
   89    | SECOND

   90 anything_with_value: single_variable
   91                    | NON_NEGATIVE_INT
   92                    | INTEGER_CONSTANT
   93                    | FLOAT_CONSTANT
   94                    | STRING_CONSTANT
   95                    | TRUE
   96                    | FALSE
   97                    | call_stmt_without_dot
   98                    | vectors

   99 $@19: ε

  100 anything_with_value: UNINEG $@19 anything_with_value
  101                    | call_stmt_without_dot ARROW pos
  102                    | inbuilt_functions ARROW pos
  103                    | inbuilt_functions
  104                    | vectors ARROW pos
  105                    | ID ARROW pos
  106                    | single_variable UNIOP
  107                    | SIN OPENCC anything_with_value CLOSECC
  108                    | COS OPENCC anything_with_value CLOSECC
  109                    | TAN OPENCC anything_with_value CLOSECC

  110 operations: bi_op
  111           | LOGICOP
  112           | relop

  113 rhs_term: openccs anything_with_value
  114         | openccs anything_with_value closeccs
  115         | anything_with_value closeccs

  116 rhs_exp: rhs_term operations rhs_exp
  117        | anything_with_value operations rhs_exp
  118        | rhs_term
  119        | anything_with_value

  120 openccs: openccs OPENCC
  121        | OPENCC

  122 closeccs: closeccs CLOSECC
  123         | CLOSECC

  124 call_stmt_with_dot: call_stmt_without_dot DOT

  125 call_stmt_without_dot: ID OPENCU CLOSECU

  126 $@20: ε

  127 call_stmt_without_dot: ID OPENCU $@20 funccallargs CLOSECU

  128 funccallargs: check_rhs_exp

  129 $@21: ε

  130 funccallargs: check_rhs_exp COMMA $@21 funccallargs

  131 $@22: ε

  132 conditional_stmt_start: OPENSQ $@22 check_rhs_exp CLOSESQ OPENCU

  133 conditional_stmt: conditional_stmt_start loop_body CLOSECU

  134 $@23: ε

  135 $@24: ε

  136 conditional_stmt: conditional_stmt_start loop_body CLOSECU $@23 OTHERWISE OPENCU $@24 loop_body CLOSECU

  137 $@25: ε

  138 $@26: ε

  139 loop_stmt: LOOP OPENSQ $@25 check_rhs_exp CLOSESQ OPENCU $@26 loop_body CLOSECU

  140 unary_operation_without_dot: single_variable UNIOP

  141 $@27: ε

  142 unary_operation_without_dot: UNINEG $@27 check_rhs_exp

  143 $@28: ε

  144 return_stmt: DARR $@28 check_rhs_exp DOT
  145            | DARR DOT

  146 comments: CMT

  147 $@29: ε

  148 output_stmt: OUTPUT COLON $@29 check_rhs_exp DOT

  149 $@30: ε

  150 input_stmt: INPUT COLON $@30 ids DOT

  151 $@31: ε

  152 $@32: ε

  153 ids: single_variable $@31 COMMA $@32 ids
  154    | single_variable

  155 inbuilt_functions_with_dot: inbuilt_functions DOT

  156 inbuilt_functions: rel_to_mag
  157                  | rel_to_vel
  158                  | rel_to_pos
  159                  | rel_to_acc
  160                  | rel_to_energy
  161                  | rel_to_angle
  162                  | rel_to_collision
  163                  | rel_to_momentum
  164                  | miscellaneous

  165 stand_id: ID

  166 rel_to_mag: MAG OPENCU stand_id CLOSECU
  167           | MAG OPENCU vectors CLOSECU

  168 rel_to_pos: OPENCU stand_id CLOSECU SETR OPENCU check_rhs_exp CLOSECU
  169           | OPENCU stand_id CLOSECU ADDR OPENCU check_rhs_exp CLOSECU
  170           | OPENCU stand_id CLOSECU R_AFTER OPENCU check_rhs_exp CLOSECU
  171           | OPENCU stand_id CLOSECU GETR

  172 rel_to_vel: OPENCU stand_id CLOSECU SETV OPENCU check_rhs_exp CLOSECU
  173           | OPENCU stand_id CLOSECU ADDV OPENCU check_rhs_exp CLOSECU
  174           | OPENCU stand_id CLOSECU V_AFTER OPENCU check_rhs_exp CLOSECU
  175           | OPENCU stand_id CLOSECU GETV

  176 rel_to_momentum: OPENCU stand_id CLOSECU SETP OPENCU check_rhs_exp CLOSECU

  177 rel_to_acc: OPENCU stand_id CLOSECU SETA OPENCU check_rhs_exp CLOSECU
  178           | OPENCU stand_id CLOSECU ADDA OPENCU check_rhs_exp CLOSECU
  179           | OPENCU stand_id CLOSECU GETA

  180 rel_to_energy: OPENCU stand_id CLOSECU KE_AFTER OPENCU check_rhs_exp CLOSECU
  181              | OPENCU stand_id CLOSECU PE_AFTER OPENCU check_rhs_exp CLOSECU
  182              | OPENCU stand_id CLOSECU TE_AFTER OPENCU check_rhs_exp CLOSECU

  183 rel_to_angle: OPENCU stand_id CLOSECU ANGLE_AFTER OPENCU check_rhs_exp CLOSECU

  184 rel_to_collision: OPENCU stand_id CLOSECU COLLIDE OPENCU stand_id COMMA ID CLOSECU
  185                 | OPENCU stand_id CLOSECU COLLIDE OPENCU stand_id CLOSECU
  186                 | OPENCU stand_id CLOSECU TIME_TO_COLLIDE OPENCU stand_id CLOSECU

  187 miscellaneous: OPENCU stand_id CLOSECU S_AFTER OPENCU check_rhs_exp CLOSECU
  188              | OPENCU stand_id CLOSECU ROC_AFTER OPENCU check_rhs_exp CLOSECU
  189              | OPENCU stand_id CLOSECU P_AFTER OPENCU check_rhs_exp CLOSECU
  190              | OPENCU stand_id CLOSECU TIME_TO_R OPENCU term_misc COMMA term_misc CLOSECU
  191              | OPENCU stand_id CLOSECU TIME_TO_V OPENCU term_misc COMMA term_misc CLOSECU

  192 term_misc: check_rhs_exp
  193          | QUESTION

  194 decl_stmt_with_exp: datatypes expressions DOT

  195 $@33: ε

  196 expressions: expression COMMA $@33 expressions
  197            | expression

  198 single_variable_declare: single_variable

  199 $@34: ε

  200 check_rhs_exp: $@34 rhs_exp

  201 $@35: ε

  202 expression: single_variable_declare ASSGN $@35 check_rhs_exp
  203           | single_variable_declare

  204 idadd2: ID

  205 $@36: ε

  206 $@37: ε

  207 $@38: ε

  208 $@39: ε

  209 $@40: ε

  210 function_decl: datatypes idadd2 ASSGN OPENCU $@36 parameters CLOSECU $@37 DARR OPENCU $@38 $@39 body $@40 CLOSECU

  211 $@41: ε

  212 $@42: ε

  213 $@43: ε

  214 function_decl: datatypes idadd2 ASSGN OPENCU CLOSECU DARR OPENCU $@41 $@42 body $@43 CLOSECU

  215 $@44: ε

  216 parameters: datatypes ID $@44

  217 $@45: ε

  218 $@46: ε

  219 parameters: datatypes ID $@45 COMMA $@46 parameters


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER_CONSTANT <object> (258) 92
    STRING_CONSTANT <object> (259) 94
    FLOAT_CONSTANT <object> (260) 93
    TRUE <object> (261) 95
    FALSE <object> (262) 96
    INT <object> (263) 61
    DOUBLE <object> (264) 62
    STRING <object> (265) 64
    BOOL <object> (266) 63
    MASS <object> (267) 65
    TIME <object> (268) 66
    POSITION <object> (269) 67
    VELOCITY <object> (270) 68
    ACC <object> (271) 69
    ENERGY <object> (272) 70
    THETA <object> (273) 71
    E <object> (274) 72
    DISTANCE <object> (275) 73
    MOMENTUM <object> (276) 74
    ID <object> (277) 77 79 105 125 127 165 184 204 216 219
    INPUT <object> (278) 150
    OUTPUT <object> (279) 148
    SETR <object> (280) 168
    ADDR <object> (281) 169
    SETV <object> (282) 172
    ADDV <object> (283) 173
    SETA <object> (284) 177
    ADDA <object> (285) 178
    SETP <object> (286) 176
    GETR <object> (287) 171
    GETA <object> (288) 179
    GETV <object> (289) 175
    KE_AFTER <object> (290) 180
    PE_AFTER <object> (291) 181
    TE_AFTER <object> (292) 182
    ANGLE_AFTER <object> (293) 183
    V_AFTER <object> (294) 174
    R_AFTER <object> (295) 170
    GET_TRAJ <object> (296)
    COLLIDE <object> (297) 184 185
    TIME_TO_COLLIDE <object> (298) 186
    ROC_AFTER <object> (299) 188
    P_AFTER <object> (300) 189
    S_AFTER <object> (301) 187
    TIME_TO_R <object> (302) 190
    TIME_TO_V <object> (303) 191
    LOOP <object> (304) 139
    BREAK <object> (305) 44
    START <object> (306) 8
    SIN <object> (307) 107
    COS <object> (308) 108
    TAN <object> (309) 109
    MAG <object> (310) 166 167
    OPENCC <object> (311) 107 108 109 120 121
    CLOSECC <object> (312) 107 108 109 122 123
    OPENSQ <object> (313) 60 80 132 139
    CLOSESQ <object> (314) 60 81 83 132 139
    OPENCU <object> (315) 8 23 41 125 127 132 136 139 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 210 214
    CLOSECU <object> (316) 8 23 41 125 127 133 136 139 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 210 214
    DOLLAR <object> (317)
    DOT <object> (318) 13 31 44 87 124 144 145 148 150 155 194
    DOUBLE_QUOTE <object> (319)
    SINGLE_QUOTE <object> (320)
    COMMA <object> (321) 60 130 153 184 190 191 196 219
    COLON <object> (322) 148 150
    ARROW <object> (323) 101 102 104 105
    ADD <object> (324) 45
    SUB <object> (325) 46
    MUL <object> (326) 47
    DIV <object> (327) 48
    MOD <object> (328) 49
    EXP <object> (329) 50
    EQ <object> (330) 51
    NEQ <object> (331) 52
    GEQ <object> (332) 53
    LEQ <object> (333) 55
    GT <object> (334) 54
    LT <object> (335) 56
    LOGICOP <object> (336) 111
    UNIOP <object> (337) 106 140
    UNINEG <object> (338) 100 142
    ASSGN <object> (339) 87 202 210 214
    DARR <object> (340) 144 145 210 214
    CMT <object> (341) 146
    QUESTION <object> (342) 193
    NON_NEGATIVE_INT <object> (343) 91
    FIRST <object> (344) 88
    SECOND <object> (345) 89
    OTHERWISE <object> (346) 136
    SCOPEOPEN <object> (347) 23 41
    SCOPECLOSE <object> (348) 23 41


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    code <object> (95)
        on left: 1 2
        on right: 0 2
    code_subpart <object> (96)
        on left: 3 4 5
        on right: 1 2
    startfn <object> (97)
        on left: 8
        on right: 4
    $@1 (98)
        on left: 6
        on right: 8
    $@2 (99)
        on left: 7
        on right: 8
    body <object> (100)
        on left: 9 10 11 12 13 14 15 16 17 18 23 24 25
        on right: 8 9 10 11 12 14 15 16 17 23 24 25 41 210 214
    $@3 (101)
        on left: 19
        on right: 23
    $@4 (102)
        on left: 20
        on right: 23
    $@5 (103)
        on left: 21
        on right: 23
    $@6 (104)
        on left: 22
        on right: 23
    loop_body <object> (105)
        on left: 26 27 28 29 31 32 33 34 35 36 41 42 43 44
        on right: 26 27 28 29 31 32 33 34 35 41 42 43 44 133 136 139
    $@7 (106)
        on left: 30
        on right: 31
    $@8 (107)
        on left: 37
        on right: 41
    $@9 (108)
        on left: 38
        on right: 41
    $@10 (109)
        on left: 39
        on right: 41
    $@11 (110)
        on left: 40
        on right: 41
    bi_op <object> (111)
        on left: 45 46 47 48 49 50
        on right: 110
    relop <object> (112)
        on left: 51 52 53 54 55 56
        on right: 112
    vectors <object> (113)
        on left: 60
        on right: 98 104 167
    $@12 (114)
        on left: 57
        on right: 60
    $@13 (115)
        on left: 58
        on right: 60
    $@14 (116)
        on left: 59
        on right: 60
    primi_datatype <object> (117)
        on left: 61 62 63 64
        on right: 75
    non_pri_datatype <object> (118)
        on left: 65 66 67 68 69 70 71 72 73 74
        on right: 76
    datatypes <object> (119)
        on left: 75 76
        on right: 194 210 214 216 219
    single_variable <object> (120)
        on left: 77 79
        on right: 84 90 106 140 153 154 198
    $@15 (121)
        on left: 78
        on right: 79
    dim_con <object> (122)
        on left: 80
        on right: 81 83
    dimensions <object> (123)
        on left: 81 83
        on right: 79 83
    $@16 (124)
        on left: 82
        on right: 83
    single_variable_for_exp_stmt <object> (125)
        on left: 84
        on right: 87
    exp_stmt <object> (126)
        on left: 87
        on right: 9 26
    $@17 (127)
        on left: 85
        on right: 87
    $@18 (128)
        on left: 86
        on right: 87
    pos <object> (129)
        on left: 88 89
        on right: 101 102 104 105
    anything_with_value <object> (130)
        on left: 90 91 92 93 94 95 96 97 98 100 101 102 103 104 105 106 107 108 109
        on right: 100 107 108 109 113 114 115 117 119
    $@19 (131)
        on left: 99
        on right: 100
    operations <object> (132)
        on left: 110 111 112
        on right: 116 117
    rhs_term <object> (133)
        on left: 113 114 115
        on right: 116 118
    rhs_exp <object> (134)
        on left: 116 117 118 119
        on right: 116 117 200
    openccs <object> (135)
        on left: 120 121
        on right: 113 114 120
    closeccs <object> (136)
        on left: 122 123
        on right: 114 115 122
    call_stmt_with_dot <object> (137)
        on left: 124
        on right: 10 27
    call_stmt_without_dot <object> (138)
        on left: 125 127
        on right: 97 101 124
    $@20 (139)
        on left: 126
        on right: 127
    funccallargs <arg_object> (140)
        on left: 128 130
        on right: 127 130
    $@21 (141)
        on left: 129
        on right: 130
    conditional_stmt_start <object> (142)
        on left: 132
        on right: 133 136
    $@22 (143)
        on left: 131
        on right: 132
    conditional_stmt <object> (144)
        on left: 133 136
        on right: 11 28
    $@23 (145)
        on left: 134
        on right: 136
    $@24 (146)
        on left: 135
        on right: 136
    loop_stmt <object> (147)
        on left: 139
        on right: 12 29
    $@25 (148)
        on left: 137
        on right: 139
    $@26 (149)
        on left: 138
        on right: 139
    unary_operation_without_dot <object> (150)
        on left: 140 142
        on right: 13 31
    $@27 (151)
        on left: 141
        on right: 142
    return_stmt <object> (152)
        on left: 144 145
        on right: 14 32
    $@28 (153)
        on left: 143
        on right: 144
    comments <object> (154)
        on left: 146
        on right: 3 15 33
    output_stmt <object> (155)
        on left: 148
        on right: 16 34
    $@29 (156)
        on left: 147
        on right: 148
    input_stmt <object> (157)
        on left: 150
        on right: 17 35
    $@30 (158)
        on left: 149
        on right: 150
    ids <object> (159)
        on left: 153 154
        on right: 150 153
    $@31 (160)
        on left: 151
        on right: 153
    $@32 (161)
        on left: 152
        on right: 153
    inbuilt_functions_with_dot <object> (162)
        on left: 155
        on right: 24 42
    inbuilt_functions <object> (163)
        on left: 156 157 158 159 160 161 162 163 164
        on right: 102 103 155
    stand_id <object> (164)
        on left: 165
        on right: 166 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191
    rel_to_mag <object> (165)
        on left: 166 167
        on right: 156
    rel_to_pos <object> (166)
        on left: 168 169 170 171
        on right: 158
    rel_to_vel <object> (167)
        on left: 172 173 174 175
        on right: 157
    rel_to_momentum <object> (168)
        on left: 176
        on right: 163
    rel_to_acc <object> (169)
        on left: 177 178 179
        on right: 159
    rel_to_energy <object> (170)
        on left: 180 181 182
        on right: 160
    rel_to_angle <object> (171)
        on left: 183
        on right: 161
    rel_to_collision <object> (172)
        on left: 184 185 186
        on right: 162
    miscellaneous <object> (173)
        on left: 187 188 189 190 191
        on right: 164
    term_misc <object> (174)
        on left: 192 193
        on right: 190 191
    decl_stmt_with_exp <object> (175)
        on left: 194
        on right: 25 43
    expressions <object> (176)
        on left: 196 197
        on right: 194 196
    $@33 (177)
        on left: 195
        on right: 196
    single_variable_declare <object> (178)
        on left: 198
        on right: 202 203
    check_rhs_exp <object> (179)
        on left: 200
        on right: 60 81 83 87 128 130 132 139 142 144 148 168 169 170 172 173 174 176 177 178 180 181 182 183 187 188 189 192 202
    $@34 (180)
        on left: 199
        on right: 200
    expression <object> (181)
        on left: 202 203
        on right: 196 197
    $@35 (182)
        on left: 201
        on right: 202
    idadd2 <object> (183)
        on left: 204
        on right: 210 214
    function_decl <object> (184)
        on left: 210 214
        on right: 5
    $@36 (185)
        on left: 205
        on right: 210
    $@37 (186)
        on left: 206
        on right: 210
    $@38 (187)
        on left: 207
        on right: 210
    $@39 (188)
        on left: 208
        on right: 210
    $@40 (189)
        on left: 209
        on right: 210
    $@41 (190)
        on left: 211
        on right: 214
    $@42 (191)
        on left: 212
        on right: 214
    $@43 (192)
        on left: 213
        on right: 214
    parameters <object> (193)
        on left: 216 219
        on right: 210 219
    $@44 (194)
        on left: 215
        on right: 216
    $@45 (195)
        on left: 217
        on right: 219
    $@46 (196)
        on left: 218
        on right: 219


State 0

    0 $accept: • code $end

    INT       shift, and go to state 1
    DOUBLE    shift, and go to state 2
    STRING    shift, and go to state 3
    BOOL      shift, and go to state 4
    MASS      shift, and go to state 5
    TIME      shift, and go to state 6
    POSITION  shift, and go to state 7
    VELOCITY  shift, and go to state 8
    ACC       shift, and go to state 9
    ENERGY    shift, and go to state 10
    THETA     shift, and go to state 11
    E         shift, and go to state 12
    DISTANCE  shift, and go to state 13
    MOMENTUM  shift, and go to state 14
    START     shift, and go to state 15
    CMT       shift, and go to state 16

    code              go to state 17
    code_subpart      go to state 18
    startfn           go to state 19
    primi_datatype    go to state 20
    non_pri_datatype  go to state 21
    datatypes         go to state 22
    comments          go to state 23
    function_decl     go to state 24


State 1

   61 primi_datatype: INT •

    $default  reduce using rule 61 (primi_datatype)


State 2

   62 primi_datatype: DOUBLE •

    $default  reduce using rule 62 (primi_datatype)


State 3

   64 primi_datatype: STRING •

    $default  reduce using rule 64 (primi_datatype)


State 4

   63 primi_datatype: BOOL •

    $default  reduce using rule 63 (primi_datatype)


State 5

   65 non_pri_datatype: MASS •

    $default  reduce using rule 65 (non_pri_datatype)


State 6

   66 non_pri_datatype: TIME •

    $default  reduce using rule 66 (non_pri_datatype)


State 7

   67 non_pri_datatype: POSITION •

    $default  reduce using rule 67 (non_pri_datatype)


State 8

   68 non_pri_datatype: VELOCITY •

    $default  reduce using rule 68 (non_pri_datatype)


State 9

   69 non_pri_datatype: ACC •

    $default  reduce using rule 69 (non_pri_datatype)


State 10

   70 non_pri_datatype: ENERGY •

    $default  reduce using rule 70 (non_pri_datatype)


State 11

   71 non_pri_datatype: THETA •

    $default  reduce using rule 71 (non_pri_datatype)


State 12

   72 non_pri_datatype: E •

    $default  reduce using rule 72 (non_pri_datatype)


State 13

   73 non_pri_datatype: DISTANCE •

    $default  reduce using rule 73 (non_pri_datatype)


State 14

   74 non_pri_datatype: MOMENTUM •

    $default  reduce using rule 74 (non_pri_datatype)


State 15

    8 startfn: START • OPENCU $@1 body $@2 CLOSECU

    OPENCU  shift, and go to state 25


State 16

  146 comments: CMT •

    $default  reduce using rule 146 (comments)


State 17

    0 $accept: code • $end
    2 code: code • code_subpart

    $end      shift, and go to state 26
    INT       shift, and go to state 1
    DOUBLE    shift, and go to state 2
    STRING    shift, and go to state 3
    BOOL      shift, and go to state 4
    MASS      shift, and go to state 5
    TIME      shift, and go to state 6
    POSITION  shift, and go to state 7
    VELOCITY  shift, and go to state 8
    ACC       shift, and go to state 9
    ENERGY    shift, and go to state 10
    THETA     shift, and go to state 11
    E         shift, and go to state 12
    DISTANCE  shift, and go to state 13
    MOMENTUM  shift, and go to state 14
    START     shift, and go to state 15
    CMT       shift, and go to state 16

    code_subpart      go to state 27
    startfn           go to state 19
    primi_datatype    go to state 20
    non_pri_datatype  go to state 21
    datatypes         go to state 22
    comments          go to state 23
    function_decl     go to state 24


State 18

    1 code: code_subpart •

    $default  reduce using rule 1 (code)


State 19

    4 code_subpart: startfn •

    $default  reduce using rule 4 (code_subpart)


State 20

   75 datatypes: primi_datatype •

    $default  reduce using rule 75 (datatypes)


State 21

   76 datatypes: non_pri_datatype •

    $default  reduce using rule 76 (datatypes)


State 22

  210 function_decl: datatypes • idadd2 ASSGN OPENCU $@36 parameters CLOSECU $@37 DARR OPENCU $@38 $@39 body $@40 CLOSECU
  214              | datatypes • idadd2 ASSGN OPENCU CLOSECU DARR OPENCU $@41 $@42 body $@43 CLOSECU

    ID  shift, and go to state 28

    idadd2  go to state 29


State 23

    3 code_subpart: comments •

    $default  reduce using rule 3 (code_subpart)


State 24

    5 code_subpart: function_decl •

    $default  reduce using rule 5 (code_subpart)


State 25

    8 startfn: START OPENCU • $@1 body $@2 CLOSECU

    $default  reduce using rule 6 ($@1)

    $@1  go to state 30


State 26

    0 $accept: code $end •

    $default  accept


State 27

    2 code: code code_subpart •

    $default  reduce using rule 2 (code)


State 28

  204 idadd2: ID •

    $default  reduce using rule 204 (idadd2)


State 29

  210 function_decl: datatypes idadd2 • ASSGN OPENCU $@36 parameters CLOSECU $@37 DARR OPENCU $@38 $@39 body $@40 CLOSECU
  214              | datatypes idadd2 • ASSGN OPENCU CLOSECU DARR OPENCU $@41 $@42 body $@43 CLOSECU

    ASSGN  shift, and go to state 31


State 30

    8 startfn: START OPENCU $@1 • body $@2 CLOSECU

    INT        shift, and go to state 1
    DOUBLE     shift, and go to state 2
    STRING     shift, and go to state 3
    BOOL       shift, and go to state 4
    MASS       shift, and go to state 5
    TIME       shift, and go to state 6
    POSITION   shift, and go to state 7
    VELOCITY   shift, and go to state 8
    ACC        shift, and go to state 9
    ENERGY     shift, and go to state 10
    THETA      shift, and go to state 11
    E          shift, and go to state 12
    DISTANCE   shift, and go to state 13
    MOMENTUM   shift, and go to state 14
    ID         shift, and go to state 32
    INPUT      shift, and go to state 33
    OUTPUT     shift, and go to state 34
    LOOP       shift, and go to state 35
    MAG        shift, and go to state 36
    OPENSQ     shift, and go to state 37
    OPENCU     shift, and go to state 38
    UNINEG     shift, and go to state 39
    DARR       shift, and go to state 40
    CMT        shift, and go to state 16
    SCOPEOPEN  shift, and go to state 41

    $default  reduce using rule 18 (body)

    body                          go to state 42
    primi_datatype                go to state 20
    non_pri_datatype              go to state 21
    datatypes                     go to state 43
    single_variable               go to state 44
    single_variable_for_exp_stmt  go to state 45
    exp_stmt                      go to state 46
    call_stmt_with_dot            go to state 47
    call_stmt_without_dot         go to state 48
    conditional_stmt_start        go to state 49
    conditional_stmt              go to state 50
    loop_stmt                     go to state 51
    unary_operation_without_dot   go to state 52
    return_stmt                   go to state 53
    comments                      go to state 54
    output_stmt                   go to state 55
    input_stmt                    go to state 56
    inbuilt_functions_with_dot    go to state 57
    inbuilt_functions             go to state 58
    rel_to_mag                    go to state 59
    rel_to_pos                    go to state 60
    rel_to_vel                    go to state 61
    rel_to_momentum               go to state 62
    rel_to_acc                    go to state 63
    rel_to_energy                 go to state 64
    rel_to_angle                  go to state 65
    rel_to_collision              go to state 66
    miscellaneous                 go to state 67
    decl_stmt_with_exp            go to state 68


State 31

  210 function_decl: datatypes idadd2 ASSGN • OPENCU $@36 parameters CLOSECU $@37 DARR OPENCU $@38 $@39 body $@40 CLOSECU
  214              | datatypes idadd2 ASSGN • OPENCU CLOSECU DARR OPENCU $@41 $@42 body $@43 CLOSECU

    OPENCU  shift, and go to state 69


State 32

   77 single_variable: ID •
   79                | ID • $@15 dimensions
  125 call_stmt_without_dot: ID • OPENCU CLOSECU
  127                      | ID • OPENCU $@20 funccallargs CLOSECU

    OPENCU  shift, and go to state 70

    OPENSQ    reduce using rule 78 ($@15)
    $default  reduce using rule 77 (single_variable)

    $@15  go to state 71


State 33

  150 input_stmt: INPUT • COLON $@30 ids DOT

    COLON  shift, and go to state 72


State 34

  148 output_stmt: OUTPUT • COLON $@29 check_rhs_exp DOT

    COLON  shift, and go to state 73


State 35

  139 loop_stmt: LOOP • OPENSQ $@25 check_rhs_exp CLOSESQ OPENCU $@26 loop_body CLOSECU

    OPENSQ  shift, and go to state 74


State 36

  166 rel_to_mag: MAG • OPENCU stand_id CLOSECU
  167           | MAG • OPENCU vectors CLOSECU

    OPENCU  shift, and go to state 75


State 37

  132 conditional_stmt_start: OPENSQ • $@22 check_rhs_exp CLOSESQ OPENCU

    $default  reduce using rule 131 ($@22)

    $@22  go to state 76


State 38

  168 rel_to_pos: OPENCU • stand_id CLOSECU SETR OPENCU check_rhs_exp CLOSECU
  169           | OPENCU • stand_id CLOSECU ADDR OPENCU check_rhs_exp CLOSECU
  170           | OPENCU • stand_id CLOSECU R_AFTER OPENCU check_rhs_exp CLOSECU
  171           | OPENCU • stand_id CLOSECU GETR
  172 rel_to_vel: OPENCU • stand_id CLOSECU SETV OPENCU check_rhs_exp CLOSECU
  173           | OPENCU • stand_id CLOSECU ADDV OPENCU check_rhs_exp CLOSECU
  174           | OPENCU • stand_id CLOSECU V_AFTER OPENCU check_rhs_exp CLOSECU
  175           | OPENCU • stand_id CLOSECU GETV
  176 rel_to_momentum: OPENCU • stand_id CLOSECU SETP OPENCU check_rhs_exp CLOSECU
  177 rel_to_acc: OPENCU • stand_id CLOSECU SETA OPENCU check_rhs_exp CLOSECU
  178           | OPENCU • stand_id CLOSECU ADDA OPENCU check_rhs_exp CLOSECU
  179           | OPENCU • stand_id CLOSECU GETA
  180 rel_to_energy: OPENCU • stand_id CLOSECU KE_AFTER OPENCU check_rhs_exp CLOSECU
  181              | OPENCU • stand_id CLOSECU PE_AFTER OPENCU check_rhs_exp CLOSECU
  182              | OPENCU • stand_id CLOSECU TE_AFTER OPENCU check_rhs_exp CLOSECU
  183 rel_to_angle: OPENCU • stand_id CLOSECU ANGLE_AFTER OPENCU check_rhs_exp CLOSECU
  184 rel_to_collision: OPENCU • stand_id CLOSECU COLLIDE OPENCU stand_id COMMA ID CLOSECU
  185                 | OPENCU • stand_id CLOSECU COLLIDE OPENCU stand_id CLOSECU
  186                 | OPENCU • stand_id CLOSECU TIME_TO_COLLIDE OPENCU stand_id CLOSECU
  187 miscellaneous: OPENCU • stand_id CLOSECU S_AFTER OPENCU check_rhs_exp CLOSECU
  188              | OPENCU • stand_id CLOSECU ROC_AFTER OPENCU check_rhs_exp CLOSECU
  189              | OPENCU • stand_id CLOSECU P_AFTER OPENCU check_rhs_exp CLOSECU
  190              | OPENCU • stand_id CLOSECU TIME_TO_R OPENCU term_misc COMMA term_misc CLOSECU
  191              | OPENCU • stand_id CLOSECU TIME_TO_V OPENCU term_misc COMMA term_misc CLOSECU

    ID  shift, and go to state 77

    stand_id  go to state 78


State 39

  142 unary_operation_without_dot: UNINEG • $@27 check_rhs_exp

    $default  reduce using rule 141 ($@27)

    $@27  go to state 79


State 40

  144 return_stmt: DARR • $@28 check_rhs_exp DOT
  145            | DARR • DOT

    DOT  shift, and go to state 80

    $default  reduce using rule 143 ($@28)

    $@28  go to state 81


State 41

   23 body: SCOPEOPEN • $@3 OPENCU $@4 body SCOPECLOSE $@5 CLOSECU $@6 body

    $default  reduce using rule 19 ($@3)

    $@3  go to state 82


State 42

    8 startfn: START OPENCU $@1 body • $@2 CLOSECU

    $default  reduce using rule 7 ($@2)

    $@2  go to state 83


State 43

  194 decl_stmt_with_exp: datatypes • expressions DOT

    ID  shift, and go to state 84

    single_variable          go to state 85
    expressions              go to state 86
    single_variable_declare  go to state 87
    expression               go to state 88


State 44

   84 single_variable_for_exp_stmt: single_variable •
  140 unary_operation_without_dot: single_variable • UNIOP

    UNIOP  shift, and go to state 89

    $default  reduce using rule 84 (single_variable_for_exp_stmt)


State 45

   87 exp_stmt: single_variable_for_exp_stmt • ASSGN $@17 check_rhs_exp DOT $@18

    ASSGN  shift, and go to state 90


State 46

    9 body: exp_stmt • body
